--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"eslint": "^8.21.0",
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-vue": "^9.3.0",
+		"husky": "^8.0.1",
 		"jsdom": "^20.0.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.7.1",
