--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
 		"test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
 		"build-only": "vite build",
 		"type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-		"lint": "pug-lint-vue ./src && eslint ./src/**/*.{ts,vue,js}",
+		"lint": "npm run lint:pug && npm run lint:eslint",
+		"lint:pug": "pug-lint-vue ./src",
+		"lint:eslint": "eslint ./src/**/*.{ts,vue,js}",
 		"predefined-lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
 		"start-dev": "npm -v && node -v && husky install && npm install"
 	},
 	"dependencies": {
+		"@element-plus/icons-vue": "^2.0.9",
+		"bootstrap": "^5.2.0",
+		"date-fns": "^2.29.2",
+		"element-plus": "^2.2.15",
 		"pinia": "^2.0.17",
 		"vue": "^3.2.37",
-		"vue-router": "^4.1.3"
+		"vue-router": "^4.1.3",
+		"vue3-datepicker": "^0.3.4"
 	},
 	"devDependencies": {
 		"@rushstack/eslint-patch": "^1.1.4",
@@ -42,6 +49,7 @@
 		"sass": "^1.54.5",
 		"start-server-and-test": "^1.14.0",
 		"typescript": "~4.7.4",
+		"unplugin-element-plus": "^0.4.1",
 		"vite": "^3.0.4",
 		"vitest": "^0.21.0",
 		"vue-tsc": "^0.39.5"
